--- a/registro.html
+++ b/registro.html
@@ -92,7 +92,7 @@
                                     <i class="fa fa-unlock"></i>
                                     <input type="password" class="form-control form-control-secondary" placeholder="Repita a senha">
                                 </div>
-                                <div class="divider"><span>Não sou um robo</span></div>
+                                <div class="divider"><span>Não sou um robo <img src="img/registro/megaman.png" width="35"></span></div>
                                 <div class="g-recaptcha-outer">
                                     <script src='https://www.google.com/recaptcha/api.js'></script>
                                     <div class="g-recaptcha" data-sitekey="6LeBwhwUAAAAAG1RDj-rS2Wu4WYNoV021q0z-LNY"></div>
